@@ -211,4 +211,5 @@
 
 0.1.0-alpha.34:
 ===============
+- (effect) partial (no radial / position) implementation (v44).
 - ?
